# article-classification-pwr-2022

./: .gitignore  dvc.yaml  main.py  pyproject.toml
.dvc/: config
article_classification_pwr_2022/: config.py  model.py  preprocessor.py
article_classification_pwr_2022/data/: datamodule.py  dataset.py  label_translator.py
article_classification_pwr_2022/preprocessing/: preprocess.py  preprocessor.py
data/: .gitignore
tests/: test_article_classification_pwr_2022.py
