[tool.poetry]
name = "article-classification-pwr-2022"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakubciszek64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.1.0"
tokenizers = "^0.12.1"
ipywidgets = "^7.7.0"
pytorch-lightning = "^1.6.2"
torchmetrics = "^0.8.1"
transformers = "^4.18.0"
wandb = "^0.12.15"
dvc = {version = "^2.10.2", extras = ["gdrive"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
